feat: initial try